# softdev-methodologies-lab4

./: README.md
cluster/: Makefile  pyproject.toml
cluster/cluster/manager/: main.py  manager.py  test_endpoints.py
cluster/cluster/node/: datastore.py  main.py  test_datastore.py
cluster/cluster/proto/: datastore.proto
cluster/cluster/proto_py/: datastore_pb2.py  datastore_pb2.pyi  datastore_pb2_grpc.py
